deployment/configs/configs-dest.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: niche-configs
spec:
  host: niche-configs
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
    - name: v3
      labels:
        version: v3
    - name: v4
      labels:
        version: v4
