deployment/configs/configs-vs-8020.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche-configs
spec:
  hosts:
    - niche-configs
  gateways:
    - mesh
  http:
  - route:
    - destination:
        host: niche-configs
        subset: v1
      weight: 80
    - destination:
        host: niche-configs
        subset: v2
      weight: 20
