deployment/configs/configs-vs-v1-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche-configs
spec:
  hosts:
  - niche-configs
  gateways:
  - mesh
  http:
  - fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 2s
    route:
      - destination:
          host: niche-configs
          subset: v1
  - route:
      - destination:
          host: niche-configs
          subset: v1
