deployment/configs/configs-vs-v3-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche-configs
spec:
  hosts:
    - niche-configs
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: niche-configs
            subset: v3
      timeout: 1s
