deployment/configs/configs-vs-v4-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-configs
spec:
  hosts:
  - niche-configs
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: niche-configs
        subset: v4
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: 5xx
