deployment/configs/configs-vs-v4.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-configs
spec:
  hosts:
    - niche-configs
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: niche-configs
            subset: v4
